welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: reassignment to val
if (a%5 == b%5) { if (a<b) {a} else if (a=b) {0} else {b}}
                                         ^