welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
if (a%5 == b%5) { if (a<b) {a} else if (a=b) {0} else {b}}
else if (a<=b) {b}
else {a} } 